--- a/projeto-final.ipynb
+++ b/projeto-final.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/gian.napolitano/anaconda3/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "C:\\Users\\lucas\\Anaconda3\\lib\\site-packages\\statsmodels\\compat\\pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
       "  from pandas.core import datetools\n"
      ]
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "  <th>Date:</th>             <td>Mon, 19 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>5.39e-232</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>13:10:33</td>     <th>  Log-Likelihood:    </th> <td> -2115.6</td> \n",
+       "  <th>Time:</th>                 <td>16:56:52</td>     <th>  Log-Likelihood:    </th> <td> -2115.6</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2277</td>      <th>  AIC:               </th> <td>   4361.</td> \n",
@@ -477,7 +477,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.427\n",
        "Method:                 Least Squares   F-statistic:                     27.47\n",
        "Date:                Mon, 19 Nov 2018   Prob (F-statistic):          5.39e-232\n",
-       "Time:                        13:10:33   Log-Likelihood:                -2115.6\n",
+       "Time:                        16:56:52   Log-Likelihood:                -2115.6\n",
        "No. Observations:                2277   AIC:                             4361.\n",
        "Df Residuals:                    2212   BIC:                             4734.\n",
        "Df Model:                          64                                         \n",
@@ -567,7 +567,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "  <th>Date:</th>             <td>Mon, 19 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>5.90e-262</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>13:10:33</td>     <th>  Log-Likelihood:    </th> <td> -2145.2</td> \n",
+       "  <th>Time:</th>                 <td>16:56:52</td>     <th>  Log-Likelihood:    </th> <td> -2145.2</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2277</td>      <th>  AIC:               </th> <td>   4320.</td> \n",
@@ -689,7 +689,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.425\n",
        "Method:                 Least Squares   F-statistic:                     121.0\n",
        "Date:                Mon, 19 Nov 2018   Prob (F-statistic):          5.90e-262\n",
-       "Time:                        13:10:33   Log-Likelihood:                -2145.2\n",
+       "Time:                        16:56:52   Log-Likelihood:                -2145.2\n",
        "No. Observations:                2277   AIC:                             4320.\n",
        "Df Residuals:                    2262   BIC:                             4406.\n",
        "Df Model:                          14                                         \n",
@@ -724,7 +724,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "  <th>Date:</th>             <td>Mon, 19 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>5.39e-232</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>13:10:34</td>     <th>  Log-Likelihood:    </th> <td> -2115.6</td> \n",
+       "  <th>Time:</th>                 <td>16:56:52</td>     <th>  Log-Likelihood:    </th> <td> -2115.6</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2277</td>      <th>  AIC:               </th> <td>   4361.</td> \n",
@@ -1046,7 +1046,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.427\n",
        "Method:                 Least Squares   F-statistic:                     27.47\n",
        "Date:                Mon, 19 Nov 2018   Prob (F-statistic):          5.39e-232\n",
-       "Time:                        13:10:34   Log-Likelihood:                -2115.6\n",
+       "Time:                        16:56:52   Log-Likelihood:                -2115.6\n",
        "No. Observations:                2277   AIC:                             4361.\n",
        "Df Residuals:                    2212   BIC:                             4734.\n",
        "Df Model:                          64                                         \n",
@@ -1135,7 +1135,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "  <th>Date:</th>             <td>Mon, 19 Nov 2018</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>13:10:34</td>     <th>  Log-Likelihood:    </th> <td> -2455.1</td>\n",
+       "  <th>Time:</th>                 <td>16:56:53</td>     <th>  Log-Likelihood:    </th> <td> -2455.1</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2277</td>      <th>  AIC:               </th> <td>   4940.</td>\n",
@@ -1279,7 +1279,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.974\n",
        "Method:                 Least Squares   F-statistic:                     5615.\n",
        "Date:                Mon, 19 Nov 2018   Prob (F-statistic):               0.00\n",
-       "Time:                        13:10:34   Log-Likelihood:                -2455.1\n",
+       "Time:                        16:56:53   Log-Likelihood:                -2455.1\n",
        "No. Observations:                2277   AIC:                             4940.\n",
        "Df Residuals:                    2262   BIC:                             5026.\n",
        "Df Model:                          15                                         \n",
@@ -1317,7 +1317,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1361,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,16 +1382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.480330186811756"
+       "4.4803301868117575"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1413,42 +1413,43 @@
       "\n",
       "1-Aroused, 2-Creative, 3-Dry, 4-Energetic, 5-Euphoric, 6-Focused, 7-Giggly, 8-Happy, 9-Hungry, 10-Mouth, 11-Relaxed, 12-Sleepy, 13-Talkative, 14-Tingly, 15-Uplifted\n",
       "\n",
-      "digite 1 para os efeitos desejados e 0 para os indesejados\n",
+      "Digite 1 para os efeitos desejados e 0 para os indesejados\n",
       "\n",
       "Aroused- 1\n"
      ]
     },
     {
      "ename": "TypeError",
-     "evalue": "Cannot cast array data from dtype('float64') to dtype('<U32') according to the rule 'safe'",
+     "evalue": "'float' object is not iterable",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-f473eb5888ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mlista_final\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mnota_final\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVariaveis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista_final\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Os efeitos que voce escolheu deixam a sua strain com uma nota aproximandamente igaual a {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnota_final\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Cannot cast array data from dtype('float64') to dtype('<U32') according to the rule 'safe'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-07c70e96a9e2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m 'Talkative- ', 'Tingly- ', 'Uplifted- ']:\n\u001b[0;32m     12\u001b[0m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[0mlista_final\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'float' object is not iterable"
      ]
     }
    ],
    "source": [
-    "lista_final=[]\n",
-    "print(\"Esses sao os efeitos que voce pode escolher, selecione apenas 4\")\n",
-    "print()\n",
-    "print('1-Aroused, 2-Creative, 3-Dry, 4-Energetic, 5-Euphoric, 6-Focused, 7-Giggly, 8-Happy, 9-Hungry, 10-Mouth, 11-Relaxed, 12-Sleepy, 13-Talkative, 14-Tingly, 15-Uplifted')\n",
-    "print()\n",
-    "print('digite 1 para os efeitos desejados e 0 para os indesejados')\n",
-    "print()\n",
+    "# lista_final=[]\n",
+    "# print(\"Esses sao os efeitos que voce pode escolher, selecione apenas 4\")\n",
+    "# print()\n",
+    "# print('1-Aroused, 2-Creative, 3-Dry, 4-Energetic, 5-Euphoric, 6-Focused, 7-Giggly, 8-Happy, 9-Hungry, 10-Mouth, 11-Relaxed, 12-Sleepy, 13-Talkative, 14-Tingly, 15-Uplifted')\n",
+    "# print()\n",
+    "# print('Digite 1 para os efeitos desejados e 0 para os indesejados')\n",
+    "# print()\n",
     "\n",
-    "for e in [ 'Aroused- ', 'Creative- ', 'Dry- ', 'Energetic- ', 'Euphoric- ',\n",
-    "'Focused- ', 'Giggly- ', 'Happy- ', 'Hungry- ', 'Mouth- ', 'Relaxed- ', 'Sleepy- ',\n",
-    "'Talkative- ', 'Tingly- ', 'Uplifted- ']:\n",
-    "    x = input(e)\n",
-    "    for j in x:\n",
-    "        lista_final.append(j)\n",
-    "\n",
-    "    nota_final = np.dot(Variaveis, np.array(lista_final))\n",
-    "    print('Os efeitos que voce escolheu deixam a sua strain com uma nota aproximandamente igaual a {}'.format(nota_final))  \n",
-    "    "
+    "# for e in [ 'Aroused- ', 'Creative- ', 'Dry- ', 'Energetic- ', 'Euphoric- ',\n",
+    "# 'Focused- ', 'Giggly- ', 'Happy- ', 'Hungry- ', 'Mouth- ', 'Relaxed- ', 'Sleepy- ',\n",
+    "# 'Talkative- ', 'Tingly- ', 'Uplifted- ']:\n",
+    "#     x = (input(e))\n",
+    "#     for j in x:\n",
+    "#         lista_final.append(j)\n",
+    "        \n",
+    "# #     a = map(float,Variaveis)\n",
+    "# #     b = map(float, np.array(lista_final))\n",
+    "#     nota_final = np.dot(Variaveis, np.array(lista_final))\n",
+    "#     print('Os efeitos que voce escolheu deixam a sua strain com uma nota aproximandamente igaual a {}'.format(nota_final))  \n"
    ]
   },
   {
@@ -1456,14 +1457,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista_final = []\n",
+    "ef = int(input())\n",
+    "lista_final.append(ef)\n",
+    "ef1 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef1)\n",
+    "ef2 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef2)\n",
+    "ef3 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef3)\n",
+    "e4 = int(input())\n",
+    "lista_final.append(e4)\n",
+    "ef5 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef5)\n",
+    "ef6 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef6)\n",
+    "ef7 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef7)\n",
+    "e8 = int(input())\n",
+    "lista_final.append(e8)\n",
+    "ef10 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef10)\n",
+    "ef11 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef11)\n",
+    "ef12 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef12)\n",
+    "ef13 = int(input())\n",
+    "lista_final.append(ef13)\n",
+    "ef14 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef14)\n",
+    "ef15 = int(input(\"age >>>\"))\n",
+    "lista_final.append(ef15)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nota_final = np.dot(Variaveis, lista_final)\n",
+    "nota_final"
+   ]
   },
   {
    "cell_type": "code",
