--- a/projeto-final.ipynb
+++ b/projeto-final.ipynb
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lucas\\Anaconda3\\lib\\site-packages\\statsmodels\\compat\\pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "/Users/gian.napolitano/anaconda3/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
       "  from pandas.core import datetools\n"
      ]
     }
@@ -229,7 +229,7 @@
        "  <th>Date:</th>             <td>Mon, 19 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>5.39e-232</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:56:52</td>     <th>  Log-Likelihood:    </th> <td> -2115.6</td> \n",
+       "  <th>Time:</th>                 <td>18:17:34</td>     <th>  Log-Likelihood:    </th> <td> -2115.6</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2277</td>      <th>  AIC:               </th> <td>   4361.</td> \n",
@@ -477,7 +477,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.427\n",
        "Method:                 Least Squares   F-statistic:                     27.47\n",
        "Date:                Mon, 19 Nov 2018   Prob (F-statistic):          5.39e-232\n",
-       "Time:                        16:56:52   Log-Likelihood:                -2115.6\n",
+       "Time:                        18:17:34   Log-Likelihood:                -2115.6\n",
        "No. Observations:                2277   AIC:                             4361.\n",
        "Df Residuals:                    2212   BIC:                             4734.\n",
        "Df Model:                          64                                         \n",
@@ -600,7 +600,7 @@
        "  <th>Date:</th>             <td>Mon, 19 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>5.90e-262</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:56:52</td>     <th>  Log-Likelihood:    </th> <td> -2145.2</td> \n",
+       "  <th>Time:</th>                 <td>18:17:34</td>     <th>  Log-Likelihood:    </th> <td> -2145.2</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2277</td>      <th>  AIC:               </th> <td>   4320.</td> \n",
@@ -689,7 +689,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.425\n",
        "Method:                 Least Squares   F-statistic:                     121.0\n",
        "Date:                Mon, 19 Nov 2018   Prob (F-statistic):          5.90e-262\n",
-       "Time:                        16:56:52   Log-Likelihood:                -2145.2\n",
+       "Time:                        18:17:34   Log-Likelihood:                -2145.2\n",
        "No. Observations:                2277   AIC:                             4320.\n",
        "Df Residuals:                    2262   BIC:                             4406.\n",
        "Df Model:                          14                                         \n",
@@ -801,7 +801,7 @@
        "  <th>Date:</th>             <td>Mon, 19 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>5.39e-232</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:56:52</td>     <th>  Log-Likelihood:    </th> <td> -2115.6</td> \n",
+       "  <th>Time:</th>                 <td>18:17:34</td>     <th>  Log-Likelihood:    </th> <td> -2115.6</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2277</td>      <th>  AIC:               </th> <td>   4361.</td> \n",
@@ -1046,7 +1046,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.427\n",
        "Method:                 Least Squares   F-statistic:                     27.47\n",
        "Date:                Mon, 19 Nov 2018   Prob (F-statistic):          5.39e-232\n",
-       "Time:                        16:56:52   Log-Likelihood:                -2115.6\n",
+       "Time:                        18:17:34   Log-Likelihood:                -2115.6\n",
        "No. Observations:                2277   AIC:                             4361.\n",
        "Df Residuals:                    2212   BIC:                             4734.\n",
        "Df Model:                          64                                         \n",
@@ -1187,7 +1187,7 @@
        "  <th>Date:</th>             <td>Mon, 19 Nov 2018</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>16:56:53</td>     <th>  Log-Likelihood:    </th> <td> -2455.1</td>\n",
+       "  <th>Time:</th>                 <td>18:17:34</td>     <th>  Log-Likelihood:    </th> <td> -2455.1</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2277</td>      <th>  AIC:               </th> <td>   4940.</td>\n",
@@ -1279,7 +1279,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.974\n",
        "Method:                 Least Squares   F-statistic:                     5615.\n",
        "Date:                Mon, 19 Nov 2018   Prob (F-statistic):               0.00\n",
-       "Time:                        16:56:53   Log-Likelihood:                -2455.1\n",
+       "Time:                        18:17:34   Log-Likelihood:                -2455.1\n",
        "No. Observations:                2277   AIC:                             4940.\n",
        "Df Residuals:                    2262   BIC:                             5026.\n",
        "Df Model:                          15                                         \n",
@@ -1388,7 +1388,7 @@
     {
      "data": {
       "text/plain": [
-       "4.4803301868117575"
+       "4.480330186811756"
       ]
      },
      "execution_count": 20,
@@ -1402,93 +1402,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esses sao os efeitos que voce pode escolher, selecione apenas 4\n",
-      "\n",
-      "1-Aroused, 2-Creative, 3-Dry, 4-Energetic, 5-Euphoric, 6-Focused, 7-Giggly, 8-Happy, 9-Hungry, 10-Mouth, 11-Relaxed, 12-Sleepy, 13-Talkative, 14-Tingly, 15-Uplifted\n",
-      "\n",
-      "Digite 1 para os efeitos desejados e 0 para os indesejados\n",
-      "\n",
-      "Aroused- 1\n"
+      "Aroused - 1\n",
+      "Creative - 1\n",
+      "Dry - 0\n",
+      "Energetic - 0\n",
+      "Euphoric - 2\n",
+      "digite 1 para efeito desejado ou 0 para indesejado \n",
+      "Euphoric - 1\n",
+      "Focused - 2\n",
+      "digite 1 para efeito desejado ou 0 para indesejado \n",
+      "Focused - 2\n",
+      "Giggly - 1\n",
+      "Happy - 1\n",
+      "Hungry - 1\n",
+      "Mouth - 1\n",
+      "Relaxed - 0\n",
+      "Sleepy - 0\n",
+      "Talkative - 0\n",
+      "Tingly - 0\n",
+      "Uplifted - 0\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'float' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-07c70e96a9e2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m 'Talkative- ', 'Tingly- ', 'Uplifted- ']:\n\u001b[0;32m     12\u001b[0m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[0mlista_final\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'float' object is not iterable"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 1, 0, 0, 1, 2, 1, 1, 1, 1, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# lista_final=[]\n",
-    "# print(\"Esses sao os efeitos que voce pode escolher, selecione apenas 4\")\n",
-    "# print()\n",
-    "# print('1-Aroused, 2-Creative, 3-Dry, 4-Energetic, 5-Euphoric, 6-Focused, 7-Giggly, 8-Happy, 9-Hungry, 10-Mouth, 11-Relaxed, 12-Sleepy, 13-Talkative, 14-Tingly, 15-Uplifted')\n",
-    "# print()\n",
-    "# print('Digite 1 para os efeitos desejados e 0 para os indesejados')\n",
-    "# print()\n",
-    "\n",
-    "# for e in [ 'Aroused- ', 'Creative- ', 'Dry- ', 'Energetic- ', 'Euphoric- ',\n",
-    "# 'Focused- ', 'Giggly- ', 'Happy- ', 'Hungry- ', 'Mouth- ', 'Relaxed- ', 'Sleepy- ',\n",
-    "# 'Talkative- ', 'Tingly- ', 'Uplifted- ']:\n",
-    "#     x = (input(e))\n",
-    "#     for j in x:\n",
-    "#         lista_final.append(j)\n",
-    "        \n",
-    "# #     a = map(float,Variaveis)\n",
-    "# #     b = map(float, np.array(lista_final))\n",
-    "#     nota_final = np.dot(Variaveis, np.array(lista_final))\n",
-    "#     print('Os efeitos que voce escolheu deixam a sua strain com uma nota aproximandamente igaual a {}'.format(nota_final))  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "lista = [ 'Aroused', 'Creative', 'Dry', 'Energetic', 'Euphoric',\n",
+    "       'Focused', 'Giggly', 'Happy', 'Hungry', 'Mouth', 'Relaxed', 'Sleepy',\n",
+    "       'Talkative', 'Tingly', 'Uplifted']\n",
     "lista_final = []\n",
-    "ef = int(input())\n",
-    "lista_final.append(ef)\n",
-    "ef1 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef1)\n",
-    "ef2 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef2)\n",
-    "ef3 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef3)\n",
-    "e4 = int(input())\n",
-    "lista_final.append(e4)\n",
-    "ef5 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef5)\n",
-    "ef6 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef6)\n",
-    "ef7 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef7)\n",
-    "e8 = int(input())\n",
-    "lista_final.append(e8)\n",
-    "ef10 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef10)\n",
-    "ef11 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef11)\n",
-    "ef12 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef12)\n",
-    "ef13 = int(input())\n",
-    "lista_final.append(ef13)\n",
-    "ef14 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef14)\n",
-    "ef15 = int(input(\"age >>>\"))\n",
-    "lista_final.append(ef15)"
+    "i=1\n",
+    "while i <= 15:\n",
+    "    for e in lista:\n",
+    "        ef = int(input(\"{} - \".format(e)))\n",
+    "        if ef > 1:\n",
+    "            print(\"digite 1 para efeito desejado ou 0 para indesejado \")\n",
+    "            ef = int(input(\"{} - \".format(e)))\n",
+    "        if sum(lista_final) == 4 & ef == 1:\n",
+    "            print('vc ja escolheu os 4 efeitos')\n",
+    "            ef = int(input(\"{} - \".format(e)))\n",
+    "        lista_final.append(ef)\n",
+    "        i+=1\n",
+    "    \n",
+    "lista_final"
    ]
   },
   {
@@ -1497,9 +1475,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nota_final = np.dot(Variaveis, lista_final)\n",
+    " nota_final = np.dot(Variaveis, lista_final)\n",
     "nota_final"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
