--- a/projeto-final----.ipynb
+++ b/projeto-final----.ipynb
@@ -31,24 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lucas\\Anaconda3\\lib\\site-packages\\statsmodels\\compat\\pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%reset -f\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.stats import beta\n",
+    "from scipy.stats import beta, probplot\n",
     "import matplotlib.pyplot as plt\n",
     "from numpy import array\n",
     "from numpy import argmax\n",
@@ -1382,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1426,6 +1417,31 @@
     "nota_final = np.dot(Variaveis, lista_final)\n",
     "print('Os efeitos que você escolheu deixam a sua strain com uma nota aproximadamente igual a {}'.format(nota_final))  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tendo em vista que a classificação dos diferentes strains leva em conta as sensações e(...) do usuário, a análise deveria se embasar naquilo que apesar de subjetivo, pudesse ser perceptível por diversos usuários. Dessa forma, avaliar sabores, como constatamos pela análise não seria um bom viés, por ser extremamente subjetivo, cada usuário teria uma preferência diferente. A eficiência então da starn poderia ser avaliada.\n",
+    "\n",
+    "Na criação de novas strains, por meio da manipulação de duas ou mais já existentes, leva-se em consideração os índices de TCH e CDI de cada substância. A proporção de tais valores é fator limitante para a criação de novas strains com efeitos desejados. Portanto, saber quais efeitos se deseja obter, tendo em vista seu impacto individual na avaliação final dos usuários contribui para determinar a proporção de TCH e CDI. É importante ressaltar que o grau do efeito, não apenas se ele existe ou não contribui para a nota (fonte), fator que poder ter diminuído a acurácia de nosso teste por não termos dados. Por outro lado, pode-se afirmar que, no desenvolvimento de uma nova strain, focar na causa mais intensa daqueles efeitos que possuem maior coeficiente em nossa regressão (como Dry, Mouth, Aroused, Energetic) pode culminar para uma melhor avaliação dos usuários também, pois são efeitos mais valorizados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probplot(datanova1, dist = 'norm', plot = plt);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
